src/_kalos_idl_parse.c
/* Generated by re2c 2.1.1 on Sun Jun 20 19:04:02 2021 */
#include <ctype.h>
#include "_kalos_defines.h"
#include "_kalos_idl_parse.h"

// Comparison equivalent to 'unsigned == 0'
#pragma warning 136 9

enum yyc_state {
    yycinit,
    yycmodule,
    yycfunction,
    yycfcomma,
    yycfret,
    yychandle,
    yychcomma,
    yycobject,
};

const char* copy_string(char* buffer, const char* a, const char* b) {
    memcpy(buffer, a, b-a);
    buffer[b-a] = 0;
    return (const char*)buffer;
}

bool kalos_idl_parse_callback(const char* s, void* context, kalos_idl_callbacks* callbacks) {
    const char* start = s;
    const char* YYMARKER;
    const char *ws, *a, *b, *c, *d, *e, *f, *g, *h;
    enum yyc_state state = yycinit;

    char buffers[4][128];

    const char *yyt1; const char *yyt2; const char *yyt3; const char *yyt4; const char *yyt5; const char *yyt6; const char *yyt7; const char *yyt8; 

    for (;;) {
    
{
	char yych;
	unsigned int yyaccept = 0;
	switch (state) {
	case yycfcomma:
		goto yyc_fcomma;
	case yycfret:
		goto yyc_fret;
	case yycfunction:
		goto yyc_function;
	case yychandle:
		goto yyc_handle;
	case yychcomma:
		goto yyc_hcomma;
	case yycinit:
		goto yyc_init;
	case yycmodule:
		goto yyc_module;
	case yycobject:
		goto yyc_object;
	}
/* *********************************** */
yyc_fcomma:
	yych = *s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy4;
	case ')':	goto yy7;
	case ',':	goto yy9;
	default:	goto yy2;
	}
yy2:
	++s;
	{ callbacks->error(context, start, s - start); return false; }
yy4:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy4;
	default:	goto yy6;
	}
yy6:
	{ continue; }
yy7:
	++s;
	state = yycfret;
	goto yyc_fret;
yy9:
	++s;
	state = yycfunction;
	goto yyc_function;
/* *********************************** */
yyc_fret:
	yych = *s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt2 = yyt3 = yyt4 = NULL;
		goto yy15;
	case ':':	goto yy18;
	case '=':
		yyt2 = yyt3 = yyt4 = NULL;
		goto yy19;
	default:	goto yy13;
	}
yy13:
	++s;
yy14:
	{ callbacks->error(context, start, s - start); return false; }
yy15:
	yyaccept = 0;
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy15;
	case '=':	goto yy20;
	default:	goto yy17;
	}
yy17:
	{ continue; }
yy18:
	yyaccept = 1;
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
	case 'a':
	case 'b':
	case 'n':
	case 'o':
	case 's':
	case 'v':	goto yy24;
	default:	goto yy14;
	}
yy19:
	yyaccept = 1;
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy21;
	default:	goto yy14;
	}
yy20:
	yych = *++s;
yy21:
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy20;
	case 'A':
	case 'B':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = s;
		goto yy31;
	case 'C':
		yyt1 = s;
		goto yy33;
	default:	goto yy22;
	}
yy22:
	s = YYMARKER;
	if (yyaccept == 0) {
		goto yy17;
	} else {
		goto yy14;
	}
yy23:
	yych = *++s;
yy24:
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy23;
	case 'a':
		yyt2 = yyt4 = s;
		goto yy25;
	case 'b':
		yyt2 = yyt4 = s;
		goto yy26;
	case 'n':
		yyt2 = yyt4 = s;
		goto yy27;
	case 'o':
		yyt2 = yyt4 = s;
		goto yy28;
	case 's':
		yyt2 = yyt4 = s;
		goto yy29;
	case 'v':
		yyt2 = yyt4 = s;
		goto yy30;
	default:	goto yy22;
	}
yy25:
	yych = *++s;
	switch (yych) {
	case 'n':	goto yy34;
	default:	goto yy22;
	}
yy26:
	yych = *++s;
	switch (yych) {
	case 'o':	goto yy35;
	default:	goto yy22;
	}
yy27:
	yych = *++s;
	switch (yych) {
	case 'u':	goto yy36;
	default:	goto yy22;
	}
yy28:
	yych = *++s;
	switch (yych) {
	case 'b':	goto yy37;
	default:	goto yy22;
	}
yy29:
	yych = *++s;
	switch (yych) {
	case 't':	goto yy38;
	default:	goto yy22;
	}
yy30:
	yych = *++s;
	switch (yych) {
	case 'o':	goto yy39;
	default:	goto yy22;
	}
yy31:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt5 = s;
		goto yy40;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy31;
	case ';':
		yyt5 = s;
		goto yy42;
	default:	goto yy22;
	}
yy33:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt5 = s;
		goto yy44;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy31;
	case ';':
		yyt5 = s;
		goto yy42;
	default:	goto yy45;
	}
yy34:
	yych = *++s;
	switch (yych) {
	case 'y':	goto yy48;
	default:	goto yy22;
	}
yy35:
	yych = *++s;
	switch (yych) {
	case 'o':	goto yy49;
	default:	goto yy22;
	}
yy36:
	yych = *++s;
	switch (yych) {
	case 'm':	goto yy50;
	default:	goto yy22;
	}
yy37:
	yych = *++s;
	switch (yych) {
	case 'j':	goto yy51;
	default:	goto yy22;
	}
yy38:
	yych = *++s;
	switch (yych) {
	case 'r':	goto yy52;
	default:	goto yy22;
	}
yy39:
	yych = *++s;
	switch (yych) {
	case 'i':	goto yy53;
	default:	goto yy22;
	}
yy40:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy40;
	case ';':	goto yy42;
	default:	goto yy22;
	}
yy42:
	++s;
	a = yyt2;
	b = yyt3;
	c = yyt1;
	d = yyt5;
	state = yycmodule;
	{
            if (a && b) {
                copy_string(buffers[1], a, b);
            } else {
                strcpy(buffers[1], "void");
            }
            callbacks->end_function(context, buffers[0], buffers[1], copy_string(buffers[2], c, d));
            continue;
        }
yy44:
	yych = *++s;
yy45:
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy44;
	case '"':
		yyt1 = s;
		goto yy46;
	case ';':	goto yy42;
	default:	goto yy22;
	}
yy46:
	yych = *++s;
	switch (yych) {
	case 0x00:	goto yy22;
	case '"':	goto yy54;
	default:	goto yy46;
	}
yy48:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt3 = s;
		goto yy55;
	case '=':
		yyt3 = s;
		goto yy20;
	default:	goto yy22;
	}
yy49:
	yych = *++s;
	switch (yych) {
	case 'l':	goto yy48;
	default:	goto yy22;
	}
yy50:
	yych = *++s;
	switch (yych) {
	case 'b':	goto yy57;
	default:	goto yy22;
	}
yy51:
	yych = *++s;
	switch (yych) {
	case 'e':	goto yy58;
	default:	goto yy22;
	}
yy52:
	yych = *++s;
	switch (yych) {
	case 'i':	goto yy59;
	default:	goto yy22;
	}
yy53:
	yych = *++s;
	switch (yych) {
	case 'd':	goto yy48;
	default:	goto yy22;
	}
yy54:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt2 = s;
		goto yy60;
	case ';':
		yyt2 = s;
		goto yy62;
	default:	goto yy22;
	}
yy55:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy55;
	case '=':	goto yy20;
	default:	goto yy22;
	}
yy57:
	yych = *++s;
	switch (yych) {
	case 'e':	goto yy64;
	default:	goto yy22;
	}
yy58:
	yych = *++s;
	switch (yych) {
	case 'c':	goto yy65;
	default:	goto yy22;
	}
yy59:
	yych = *++s;
	switch (yych) {
	case 'n':	goto yy66;
	default:	goto yy22;
	}
yy60:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy60;
	case ';':	goto yy62;
	default:	goto yy22;
	}
yy62:
	++s;
	a = yyt4;
	b = yyt3;
	c = yyt1;
	d = yyt2;
	state = yycmodule;
	{
            if (a && b) {
                copy_string(buffers[1], a, b);
            } else {
                strcpy(buffers[1], "void");
            }
            callbacks->end_function_c(context, buffers[0], buffers[1], copy_string(buffers[2], c, d));
            continue;
        }
yy64:
	yych = *++s;
	switch (yych) {
	case 'r':	goto yy48;
	default:	goto yy22;
	}
yy65:
	yych = *++s;
	switch (yych) {
	case 't':	goto yy48;
	default:	goto yy22;
	}
yy66:
	yych = *++s;
	switch (yych) {
	case 'g':	goto yy48;
	default:	goto yy22;
	}
/* *********************************** */
yyc_function:
	yych = *s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy71;
	case ')':	goto yy74;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = s;
		goto yy76;
	default:	goto yy69;
	}
yy69:
	++s;
yy70:
	{ callbacks->error(context, start, s - start); return false; }
yy71:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy71;
	default:	goto yy73;
	}
yy73:
	{ continue; }
yy74:
	++s;
	state = yycfret;
	goto yyc_fret;
yy76:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy81;
	default:	goto yy70;
	}
yy77:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy77;
	case ':':	goto yy82;
	default:	goto yy79;
	}
yy79:
	s = YYMARKER;
	goto yy70;
yy80:
	yych = *++s;
yy81:
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt2 = s;
		goto yy77;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy80;
	case ':':
		yyt2 = s;
		goto yy82;
	default:	goto yy79;
	}
yy82:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy82;
	case 'a':
		yyt3 = s;
		goto yy84;
	case 'b':
		yyt3 = s;
		goto yy85;
	case 'n':
		yyt3 = s;
		goto yy86;
	case 'o':
		yyt3 = s;
		goto yy87;
	case 's':
		yyt3 = s;
		goto yy88;
	case 'v':
		yyt3 = s;
		goto yy89;
	default:	goto yy79;
	}
yy84:
	yych = *++s;
	switch (yych) {
	case 'n':	goto yy90;
	default:	goto yy79;
	}
yy85:
	yych = *++s;
	switch (yych) {
	case 'o':	goto yy91;
	default:	goto yy79;
	}
yy86:
	yych = *++s;
	switch (yych) {
	case 'u':	goto yy92;
	default:	goto yy79;
	}
yy87:
	yych = *++s;
	switch (yych) {
	case 'b':	goto yy93;
	default:	goto yy79;
	}
yy88:
	yych = *++s;
	switch (yych) {
	case 't':	goto yy94;
	default:	goto yy79;
	}
yy89:
	yych = *++s;
	switch (yych) {
	case 'o':	goto yy95;
	default:	goto yy79;
	}
yy90:
	yych = *++s;
	switch (yych) {
	case 'y':	goto yy96;
	default:	goto yy79;
	}
yy91:
	yych = *++s;
	switch (yych) {
	case 'o':	goto yy97;
	default:	goto yy79;
	}
yy92:
	yych = *++s;
	switch (yych) {
	case 'm':	goto yy98;
	default:	goto yy79;
	}
yy93:
	yych = *++s;
	switch (yych) {
	case 'j':	goto yy99;
	default:	goto yy79;
	}
yy94:
	yych = *++s;
	switch (yych) {
	case 'r':	goto yy100;
	default:	goto yy79;
	}
yy95:
	yych = *++s;
	switch (yych) {
	case 'i':	goto yy101;
	default:	goto yy79;
	}
yy96:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt4 = s;
		goto yy102;
	case ')':
	case ',':
		yyt5 = NULL;
		yyt4 = s;
		goto yy104;
	case '.':
		yyt4 = s;
		goto yy106;
	default:	goto yy79;
	}
yy97:
	yych = *++s;
	switch (yych) {
	case 'l':	goto yy96;
	default:	goto yy79;
	}
yy98:
	yych = *++s;
	switch (yych) {
	case 'b':	goto yy107;
	default:	goto yy79;
	}
yy99:
	yych = *++s;
	switch (yych) {
	case 'e':	goto yy108;
	default:	goto yy79;
	}
yy100:
	yych = *++s;
	switch (yych) {
	case 'i':	goto yy109;
	default:	goto yy79;
	}
yy101:
	yych = *++s;
	switch (yych) {
	case 'd':	goto yy96;
	default:	goto yy79;
	}
yy102:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy102;
	case ')':
	case ',':
		yyt5 = NULL;
		goto yy104;
	case '.':	goto yy106;
	default:	goto yy79;
	}
yy104:
	++s;
	a = yyt1;
	b = yyt2;
	c = yyt3;
	d = yyt4;
	f = yyt5;
	s -= 1;
	e = yyt5;
	if (yyt5 != NULL) e -= 3;
	state = yycfcomma;
	{
            callbacks->function_arg(context, copy_string(buffers[1], a, b), copy_string(buffers[2], c, d), e != NULL);
            continue;
        }
yy106:
	yych = *++s;
	switch (yych) {
	case '.':	goto yy110;
	default:	goto yy79;
	}
yy107:
	yych = *++s;
	switch (yych) {
	case 'e':	goto yy111;
	default:	goto yy79;
	}
yy108:
	yych = *++s;
	switch (yych) {
	case 'c':	goto yy112;
	default:	goto yy79;
	}
yy109:
	yych = *++s;
	switch (yych) {
	case 'n':	goto yy113;
	default:	goto yy79;
	}
yy110:
	yych = *++s;
	switch (yych) {
	case '.':	goto yy114;
	default:	goto yy79;
	}
yy111:
	yych = *++s;
	switch (yych) {
	case 'r':	goto yy96;
	default:	goto yy79;
	}
yy112:
	yych = *++s;
	switch (yych) {
	case 't':	goto yy96;
	default:	goto yy79;
	}
yy113:
	yych = *++s;
	switch (yych) {
	case 'g':	goto yy96;
	default:	goto yy79;
	}
yy114:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt5 = s;
		goto yy115;
	case ')':
	case ',':
		yyt5 = s;
		goto yy104;
	default:	goto yy79;
	}
yy115:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy115;
	case ')':
	case ',':	goto yy104;
	default:	goto yy79;
	}
/* *********************************** */
yyc_handle:
	yych = *s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy121;
	case ')':	goto yy124;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':
		yyt1 = s;
		goto yy125;
	default:	goto yy119;
	}
yy119:
	++s;
yy120:
	{ callbacks->error(context, start, s - start); return false; }
yy121:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy121;
	default:	goto yy123;
	}
yy123:
	{ continue; }
yy124:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy126;
	case ';':	goto yy129;
	default:	goto yy120;
	}
yy125:
	yych = *(YYMARKER = ++s);
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case ':':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy134;
	default:	goto yy120;
	}
yy126:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy126;
	case ';':	goto yy129;
	default:	goto yy128;
	}
yy128:
	s = YYMARKER;
	goto yy120;
yy129:
	++s;
	state = yycmodule;
	{
            callbacks->end_handle(context);
        }
yy131:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy131;
	case ':':	goto yy135;
	default:	goto yy128;
	}
yy133:
	yych = *++s;
yy134:
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':
		yyt2 = s;
		goto yy131;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy133;
	case ':':
		yyt2 = s;
		goto yy135;
	default:	goto yy128;
	}
yy135:
	yych = *++s;
	switch (yych) {
	case '\t':
	case '\n':
	case '\r':
	case ' ':	goto yy135;
	case 'a':
		yyt3 = s;
		goto yy137;
	case 'b':
		yyt3 = s;
		goto yy138;
	case 'n':
		yyt3 = s;
		goto yy139;
	case 'o':
		yyt3 = s;
		goto yy140;
	case 's':
		yyt3 = s;
		goto yy141;
	case 'v':
		yyt3 = s;
		goto yy142;
	default:	goto yy128;
	}
yy137:
	yych = *++s;
